--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "firebase": "^11.2.0",
     "localforage": "^1.10.0",
     "lucide-react": "^0.473.0",
     "match-sorter": "^8.0.0",
