--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "firebase": "^11.2.0",
+    "framer-motion": "^12.0.6",
     "localforage": "^1.10.0",
     "lucide-react": "^0.473.0",
     "match-sorter": "^8.0.0",
