--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "localforage": "^1.10.0",
     "lucide-react": "^0.473.0",
     "match-sorter": "^8.0.0",
+    "motion": "^12.6.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-fast-marquee": "^1.6.5",
